--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
-    <title>myWorldVault</title>
+    <title>My Word Vault</title>
   </head>
   <body>
     <div id="app"></div>
